--- a/홈페이지.css
+++ b/홈페이지.css
@@ -5,92 +5,77 @@
 
 .header-container 
 {
-    position: relative;
-    width: 100%;
    
+    margin-top:10px;
 }
 
-.header-container h4 
+.header-container h4, .header-container h5 
 {
+ 
     position: absolute;
     margin: 0; /* 기본 여백 제거 */
-    top: 10%; /* 수직 가운데 정렬 */
-   
-}
-.header-container h5
+    top: 0; /* 수직 맨 위로 정렬 */
+    /* width: 100%; 부모의 가로 크기에 맞춤 */
+    
+}.position-left
 {
     position: absolute;
-    margin: 0; /* 기본 여백 제거 */
-    top: 10%; /* 수직 가운데 정렬 */
-   
 }
-.title 
-{
-    left: 10%;
-}
-
-.Information1 
-{
-    left: 60%
-}
-
-.Information2
+.slideshow-container
  {
-    left: 68%;
+    display: flex;
 }
-.Information3
+#slideshow1
 {
-    left:76%;
-}
-.Information4
-{
-    left:84%;
-}
-
-
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f0f0f0;
-}
-
-.slideshow-container {
+    
+    width: 300px;
+    height: 200px;
     position: relative;
-    max-width: 1000px;
-    margin: auto;
-    overflow: hidden;
+    margin-left:6%;
+    margin-top:10%;
+    
+}
+#slideshow2
+{
+    
+    width: 300px;
+    height: 200px;
+    position: relative;
+    margin-left:3%;
+    margin-top:10%;
+    
+}
+#slideshow3
+{
+    
+    width: 300px;
+    height: 200px;
+    position: relative;
+    margin-left:3%;
+    margin-top:10%;
+    
+}
+#slideshow4
+{
+    
+    width: 300px;
+    height: 200px;
+    position: relative;
+    margin-left:3%;
+    margin-top:10%;
+    
 }
 
-.slide {
-    display: none;
-}
-
-.slide img {
+#slideshow1 img,#slideshow2 img,#slideshow3 img,#slideshow4 img    
+{
+   position: absolute;
     width: 100%;
-    height: auto;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
 }
-
-.prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
+#slideshow1 img.active,#slideshow2 img.active,#slideshow3 img.active,#slideshow4 img.active  
+{
+    opacity: 1;
 }
-
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-.prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-}
+/**/
